Created createChat and ChatAction api
